# HARU-embodied-social-ai

./: .gitignore  HARU_PROJECT_CONTEXT.md  HARU_RESEARCH_GOALS.txt  HARU_RUN_COMMANDS.txt  HARU_TROUBLESHOOTING_LOG.txt  README.md  brain_test.py  launch_vla.sh  requirements.txt
scripts/: build_trtllm_docker.sh  convert_gemma4_trtllm.sh  convert_to_rlds.py  gemma4_mm_patch.py  gemma4_server.py  quantize_gemma4_autoround.py  run_trtllm_server.sh  run_vllm_server.sh  setup_env.sh  test_autoround.py  test_gemma4.py  train_lora.py  validate_rope_ppl.py  vllm_serve_cmd.sh
src/haru_action/: package.xml  setup.cfg  setup.py
src/haru_action/haru_action/: action_node.py
src/haru_attention/: package.xml  setup.py
src/haru_attention/haru_attention/: attention_node.py
src/haru_audio/: package.xml  setup.py
src/haru_audio/haru_audio/: audio_node.py
src/haru_brain/: package.xml  setup.cfg  setup.py
src/haru_brain/haru_brain/: adapter_manager.py  brain_node.py  gemma4_autoround_inference.py  gemma4_inference.py  gemma4_trtllm_inference.py  session_memory.py  tom_prompt.py
src/haru_expression/: package.xml  setup.py
src/haru_expression/haru_expression/: expression_node.py
src/haru_expression/haru_expression/robot_face/: common_helpers.py  main.py
src/haru_logger/: package.xml  setup.py
src/haru_logger/haru_logger/: episode_writer.py  hitl_node.py
src/haru_tts/: package.xml  setup.py
src/haru_tts/haru_tts/: tts_node.py
src/haru_vision/: package.xml  setup.cfg  setup.py
src/haru_vision/haru_vision/: vision_node.py
(+15 files in other folders)
