<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>haru_logger</name>
  <version>0.1.0</version>
  <description>HARU HITL Episode Logger — Human-in-the-Loop data collection for RLDS fine-tuning</description>
  <maintainer email="22100713@handong.ac.kr">Hyungmin Cho</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
